examples/csharp/errors/invalid-request/obj/Debug/net8.0/InvalidRequest.AssemblyInfoInputs.cache
be59130675f81b13caa1c9658d4a6e93d7d1978f7e6ef2f64edaa8b9f834873e
